version/0.18/_sources/api/solver/_autosummary/settings/solution_controls.rst.txt
:orphan:

.. _solution_controls:

solution_controls
=================

.. autoclass:: ansys.fluent.core.solver.settings_232.solution_controls.solution_controls
    :show-inheritance:

.. rubric:: Arguments

================   ================

Argument                    Summary

================   ================
:ref:`mf <mf_1>`        'mf' child.

:ref:`urf <urf>`       'urf' child.

================   ================

.. rubric:: Included in:

==========================================================   ============================================

Parent                                                                                            Summary

==========================================================   ============================================
:ref:`mapped_interface_options <mapped_interface_options>`       Enter the mapped-interface-options menu.

==========================================================   ============================================

