version/0.23/_sources/api/solver/_autosummary/settings/solution_controls.rst.txt
:orphan:

.. _solution_controls:

solution_controls
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.solution_controls.solution_controls
    :show-inheritance:

.. rubric:: Arguments

==========================================================   ============================

Argument                                                                          Summary

==========================================================   ============================
:ref:`mapping_frequency <mapping_frequency>`                           Mapping Frequency.

:ref:`under_relaxation_factor <under_relaxation_factor_1>`       Under-Relaxation Factor.

==========================================================   ============================

.. rubric:: Included in:

==========================================================   ============================================

Parent                                                                                            Summary

==========================================================   ============================================
:ref:`mapped_interface_options <mapped_interface_options>`       Enter the mapped-interface-options menu.

==========================================================   ============================================

